don't require authentication to create a new user
